--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<center><big>НАШ САЙТ В РАЗРАБОТКЕ</big></center>
+<h2 style="text-align: center;"><cite>Сайт в разработке, приносим свои извинения за неудобства</cite></h2>
