--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h2 style="text-align: center;"><cite>Сайт в разработке, приносим свои извинения за неудобства</cite></h2>
+<img src="https://dbck.ru/logo.png" alt="Центрируем изображение" class="center-img" />
