--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h2 style="text-align: center;"><cite>Сайт в разработке, приносим свои извинения за неудобства</cite></h2>
+<p align="center"><font size="4"><cite>Сайт в разработке, </cite></font></p>
+<p align="center"><font size="4"><cite>приносим свои извинения за неудобства</cite></font></p>
 <p style="text-align: center;"><img  src="logo.png" alt="img" width="250" height="250" /></p> 
