--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p style="text-align: center;"><img  src="logo.png" alt="img" width="250" height="250" /></p> 
 <p align="center"><b><font color="48618b"><font size="4"><cite>Сайт в разработке, </cite></font></font></b></p>
-<p align="center"><b><font color="48618b"><font size="4"><cite>приносим свои извинения за неудобства.</cite></font></font></b></p>
+<p align="center"><b><font color="48618b"><font size="4"><cite>приносим свои извинения </cite></font></font></b></p>
+<p align="center"><b><font color="48618b"><font size="4"><cite>за неудобства.</cite></font></font></b></p>
