--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <p align="center"><b><font color="48618b"><font size="4"><cite>Сайт в разработке, </cite></font></font></b></p>
 <p align="center"><b><font color="48618b"><font size="4"><cite>приносим свои извинения </cite></font></font></b></p>
 <p align="center"><b><font color="48618b"><font size="4"><cite>за неудобства.</cite></font></font></b></p>
-&nbsp;
-&nbsp;
-<p align="center"><b><font color="48618b"><font size="4"><cite>E-mail для связи: info@dbck.ru</cite></font></font></b></p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center"><b><font color="48618b"><font size="4"><cite>E-mail для связи:</cite></font></font></b></p>
+<p align="center"><a href="mailto:info@dbck.ru"><b><font color="48618b"><font size="4"><cite>info@dbck.ru</cite></font></font></b></a></p>
