--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
 <p style="text-align: center;"><img  src="logo.png" alt="img" width="250" height="250" /></p> 
 <p align="center">&nbsp;</p>
 <p align="center"><b><font color="48618b"><font size="4"><cite>Сайт в разработке, </cite></font></font></b></p>
