--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <p align="center"><b><font color="48618b"><font size="4"><cite>за неудобства.</cite></font></font></b></p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
-<p align="center"><b><font color="48618b"><font size="4"><cite>E-mail для связи:</cite></font></font></b></p>
-<p align="center"><a href="mailto:info@dbck.ru"><b><font color="48618b"><font size="4"><cite>info@dbck.ru</cite></font></font></b></a></p>
+<p align="center"><font size="3"><b><font color="48618b"><cite>E-mail для связи:</cite></font></b></font></p>
+<p align="center"><font size="3"><a href="mailto:info@dbck.ru"><b><font color="48618b"><cite>info@dbck.ru</cite></font></b></a></font></p>
