--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <p align="center">&nbsp;</p>
 <p style="text-align: center;"><img  src="logo.png" alt="img" width="250" height="250" /></p> 
 <p align="center">&nbsp;</p>
-<p align="center"><b><font color="48618b"><font size="4"><cite>Сайт в разработке, </cite></font></font></b></p>
-<p align="center"><b><font color="48618b"><font size="4"><cite>приносим свои извинения </cite></font></font></b></p>
+<p align="center"><b><font color="48618b"><font size="4"><cite>Сайт в разработке,</cite></font></font></b></p>
+<p align="center"><b><font color="48618b"><font size="4"><cite>приносим свои извинения</cite></font></font></b></p>
 <p align="center"><b><font color="48618b"><font size="4"><cite>за неудобства.</cite></font></font></b></p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
-<p align="center"><font size="3"><b><font color="48618b"><cite>E-mail для связи:</cite></font></b></font></p>
+<p align="center"><font size="3"><b><font color="48618b"><cite>Наши контакты:</cite></font></b></font></p>
+<p align="center"><b><font color="48618b"><font size="4"><cite>8(495)181-6009</cite></font></font></b></p>
+<p align="center"><b><font color="48618b"><font size="4"><cite>8(800)700-1920</cite></font></font></b></p>
 <p align="center"><font size="3"><a href="mailto:info@dbck.ru"><b><font color="48618b"><cite>info@dbck.ru</cite></font></b></a></font></p>
