--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center"><font size="3"><b><font color="48618b"><cite>Наши контакты:</cite></font></b></font></p>
-<p align="center"><font size="3"><a href="tel:84951816009"><b><font color="48618b"><cite>+7(495)181-6009</cite></font></b></a></font></p>
-<p align="center"><font size="3"><a href="tel:88007001920"><b><font color="48618b"><cite>+7(800)700-1920</cite></font></b></a></font></p>
+<p align="center"><font size="3"><a href="tel:+74951816009"><b><font color="48618b"><cite>+7(495)181-6009</cite></font></b></a></font></p>
+<p align="center"><font size="3"><a href="tel:+78007001920"><b><font color="48618b"><cite>+7(800)700-1920</cite></font></b></a></font></p>
 <p align="center"><font size="3"><a href="mailto:info@dbck.ru"><b><font color="48618b"><cite>info@dbck.ru</cite></font></b></a></font></p>
